# Tracking

./: .gitignore  README.md
demo/: CMakeLists.txt  TrackingDemo.cpp
include/: BatchTracker.hpp  Common.hpp  Tracking.hpp
src/: BatchTracker.cpp  Common.cpp  Tracking.cpp
